--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-main, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section { display: block; }
+main { display: block; }
